[iOS] Animate constraints when exiting fullscreen

This CL animates the toolbar constraints change when animating the
fullscreen final position (i.e. getting out or in).

Bug: 876712
Cq-Include-Trybots: luci.chromium.try:ios-simulator-cronet;luci.chromium.try:ios-simulator-full-configs
Change-Id: I58dc0c200138f9cf482e9ee25a76e2653665fbfe
Reviewed-on: https://chromium-review.googlesource.com/1199063
Reviewed-by: Stepan Khapugin <stkhapugin@chromium.org>
Commit-Queue: Stepan Khapugin <stkhapugin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587977}
Former-commit-id: 8600c4494315e658673c9bd2dd76a01f5428e757