ios/chrome/browser/ui/toolbar/adaptive/primary_toolbar_view_controller.mm
@@ -203,6 +203,7 @@
   CGFloat finalProgress = animator.finalProgress;
   [animator addAnimations:^{
     [self updateForFullscreenProgress:finalProgress];
+    [self.view layoutIfNeeded];
   }];
 }
 
